[gd_scene load_steps=21 format=3 uid="uid://dy4k6jkpav2wc"]

[ext_resource type="Script" path="res://BOSS/SCRIPTS/Skotadi_Dog_Guards/dog_2.gd" id="1_sk5ry"]
[ext_resource type="Texture2D" uid="uid://dxy08ovsdj3ws" path="res://BOSS/ASSETS/Skotadi_Dog_Guards/dog2_spritesheet.png" id="2_2qql0"]
[ext_resource type="Script" path="res://FMS/Attack_Box.gd" id="3_kob8a"]
[ext_resource type="Script" path="res://FMS/BASE/State Machine.gd" id="3_tm80q"]
[ext_resource type="Script" path="res://FMS/STATES/IDLE.gd" id="4_mp1s4"]
[ext_resource type="Script" path="res://FMS/STATES/WANDER.gd" id="5_d2wpj"]
[ext_resource type="Script" path="res://FMS/STATES/CHASE.gd" id="6_po3ia"]
[ext_resource type="Script" path="res://FMS/STATES/ATTACK.gd" id="7_du57o"]
[ext_resource type="Script" path="res://FMS/Hurt_Box.gd" id="8_rfow7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_srj3a"]
radius = 29.5466

[sub_resource type="Animation" id="Animation_0yks1"]
resource_name = "ATTACK"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_sya6f"]
resource_name = "CHASE"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yod42"]
resource_name = "DEATH"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dpl2w"]
resource_name = "IDLE"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rhfhf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n84f4"]
resource_name = "WANDER"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dog_2_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dog_2_Sprite/Attack_Box:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pey1k"]
_data = {
"ATTACK": SubResource("Animation_0yks1"),
"CHASE": SubResource("Animation_sya6f"),
"DEATH": SubResource("Animation_yod42"),
"IDLE": SubResource("Animation_dpl2w"),
"RESET": SubResource("Animation_rhfhf"),
"WANDER": SubResource("Animation_n84f4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsoyr"]
size = Vector2(96, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_6lgn1"]
radius = 128.996

[sub_resource type="CircleShape2D" id="CircleShape2D_w74xv"]
radius = 57.2713

[node name="Dog_1" type="CharacterBody2D" node_paths=PackedStringArray("FMS_Dog1", "hurt_box") groups=["dog1"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_sk5ry")
FMS_Dog1 = NodePath("FSM")
hurt_box = NodePath("Hurt_Box")

[node name="Sprite" type="Node2D" parent="."]
rotation = -1.5708

[node name="Dog_2_Sprite" type="Sprite2D" parent="Sprite"]
texture_filter = 1
texture = ExtResource("2_2qql0")
hframes = 7
vframes = 3

[node name="Attack_Box" type="Area2D" parent="Sprite/Dog_2_Sprite"]
monitoring = false
script = ExtResource("3_kob8a")
damage = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Dog_2_Sprite/Attack_Box"]
position = Vector2(-0.000282359, 78)
shape = SubResource("CircleShape2D_srj3a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_pey1k")
}

[node name="Collision" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 5
shape = SubResource("RectangleShape2D_dsoyr")

[node name="FSM" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_tm80q")
initial_state = NodePath("IDLE")

[node name="IDLE" type="Node2D" parent="FSM" node_paths=PackedStringArray("timer_idle", "player_detector_1")]
script = ExtResource("4_mp1s4")
timer_idle = NodePath("../../Timer")
timer_wait_time = 3.0
ray_cast = "1 RAYCAST"
next_state_1 = "wander"
next_state_2 = "chase"
player_detector_1 = NodePath("../../DetectorY")

[node name="WANDER" type="Node2D" parent="FSM" node_paths=PackedStringArray("timer_wander", "Points", "next_point", "Navigator", "player_detector_1")]
script = ExtResource("5_d2wpj")
timer_wander = NodePath("../../Timer")
wander_speed = 100.0
Points = NodePath("../../Points")
next_point = NodePath("../../Timer_Wander_Points")
Navigator = NodePath("../../Dog_1_nav")
player_detector_1 = NodePath("../../DetectorY")
timer_wait_time = 7.0
previous_state = "idle"
next_state = "chase"
ray_cast = "1 RAYCAST"

[node name="CHASE" type="Node2D" parent="FSM" node_paths=PackedStringArray("Navigator", "timer_chase", "player_detector_1", "attack_detector")]
script = ExtResource("6_po3ia")
Navigator = NodePath("../../Dog_1_nav")
timer_chase = NodePath("../../Timer")
player_detector_1 = NodePath("../../DetectorY")
attack_detector = NodePath("../../Attack_Detector")
chase_speed = 125.0
timer_time = 2.5
previous_state = "idle"
next_state = "attack"
ray_casts = "1 RAYCAST"
type_of_chase = "Freely"

[node name="ATTACK" type="Node2D" parent="FSM" node_paths=PackedStringArray("attack_detector", "Navigator", "player_detector_1")]
script = ExtResource("7_du57o")
timer_time = 0.75
attack_detector = NodePath("../../Attack_Detector")
chase_speed = 150.0
Navigator = NodePath("../../Dog_1_nav")
previous_state = "idle"
type_of_attack = "Mele"
ray_casts = "1 RAYCAST"
type_of_chase = "Freely"
player_detector_1 = NodePath("../../DetectorY")

[node name="Timer_Wander_Points" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DetectorY" type="RayCast2D" parent="."]
light_mask = 4
target_position = Vector2(0, 400)

[node name="Attack_Detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Detector"]
shape = SubResource("CircleShape2D_6lgn1")

[node name="Hurt_Box" type="Area2D" parent="."]
script = ExtResource("8_rfow7")
health = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Box"]
rotation = 1.5708
shape = SubResource("CircleShape2D_w74xv")

[node name="Points" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Points"]
position = Vector2(64, 64)

[node name="Marker2D2" type="Marker2D" parent="Points"]
position = Vector2(-64, -64)

[node name="Marker2D3" type="Marker2D" parent="Points"]
position = Vector2(-64, 64)

[node name="Marker2D4" type="Marker2D" parent="Points"]
position = Vector2(64, -64)

[node name="Dog_1_nav" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -96.0
offset_top = 96.0
offset_right = 104.0
offset_bottom = 123.0
max_value = 1000.0
value = 1000.0
